# MCSM

./: README.md  pyproject.toml
src/minecraft_server_management/: mcsm.py
